--- a/deleteaccount.html
+++ b/deleteaccount.html
@@ -53,16 +53,8 @@
 </head>
 <body>
     <div class="container">
-        <h2>Solicitud de Borrado de Cuenta</h2>
-        <form action="mailto:info@accesplay.info" method="post" enctype="text/plain">
-            <label for="displayName">Nombre de Usuario</label>
-            <input type="text" id="displayName" name="displayName" required>
-
-            <label for="creationDate">Fecha de Creación de la Cuenta</label>
-            <input type="date" id="creationDate" name="creationDate" required>
-
-            <input type="submit" value="Enviar Solicitud">
-        </form>
+        <h2>Delete account</h2>
+       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScpxJvAtZb8diZoPfhdnH8kX6Y07DZoEPchlHt16S3hNf9TMg/viewform?embedded=true" width="640" height="618" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
 </body>
 </html>
