--- a/deleteaccount.html
+++ b/deleteaccount.html
@@ -20,7 +20,8 @@
             padding: 20px;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
+            min-width: 800px;
+            margin: auto;
             text-align: center;
         }
         .container h2 {
